infrastructure/traefik/network-policies.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-only-ingress-and-cluster-egress
  namespace: traefik
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: traefik
  policyTypes:
  - Ingress
  - Egress
  # permit all ingress traffic
  ingress:
  - {}
  # permit egress traffic only in cluster
  egress:
  - to:
    - namespaceSelector: {}
